# local-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
localpython/: __main__.py
