[project]
name = "localpython"
version = "0.2.0"
description = "Run Python scripts using the local virtual environment without activating it"
authors = [{ name = "Yali Achitov", email = "yaliachitov26@gmail.com" }]
readme = "README.md"
requires-python = ">=3.7"

[project.scripts]
localpython = "localpython.__main__:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
